# Robojudge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  environment.yml  main.py  pyproject.toml  setup.py  test.py
client/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  old.eslintrc.js  package-lock.json  package.json  tsconfig.json
client/public/: index.html  manifest.json
client/src/: App.tsx  index.css  index.tsx
datasets/finetuning/: test.jsonl  train.jsonl
db/: db_client.py
myproject.egg-info/: SOURCES.txt
research/: README.MD  embedding.py  tokenizer.py
research/answer-evaluator/: auto_evaluator.py  base_evaluator.py  bert_score_evaluator.py  evaluator.py  finetuning_result_analysis.ipynb  human_result_analysis.ipynb  llm_answerer.py  result_analysis.ipynb
research/finetuning/: prepare_datasets.py
research/llm-answer-results/: robojudge_auto_results.csv  robojudge_human_results.csv
research/llm-evaluator/: evaluator.py  generate_chunks.py
research/prototypes/: embedding.py  tokenizer.py  tokenizer_corpus_scraping.py
research/summarizer/: base_summarizer.py  gpt_summarizer.py  llama_summarizer.py
research/summarizing/: gpt_summarizer.py
robojudge/: main.py
robojudge/components/: case_page_scraper.py  chunker.py  paginating_scraper.py
robojudge/db/: chroma_db.py  mongo_db.py
robojudge/llm-evaluator/: generate_summaries.py
robojudge/routers/: cases.py  rulings.py  scraping.py  summaries.py
robojudge/tasks/: case_scraping.py  database_initializer.py  enrich_chroma_metadata.py  ruling_ids_selector.py  scraper_pool.py  scraping_scheduler.py
robojudge/temp/: init.py  test.py  test_langchain.py
robojudge/utils/: api_types.py  functional.py  internal_types.py  launch.py  logger.py  settings.py
scraper/: case_page_scraper.py  scraper_orchestrator.py
server/: Dockerfile  main.py  test.py
server/db/: chroma_db.py  mongo_db.py  vector_db.py
server/llm-evaluator/: generate_chunks.py  generate_summaries.py
server/model/: bard.py  embedding.py  gpt.py  lemmatizer.py  pretokenizer.py  tokenizer.py
server/routers/: cases.py  query.py  summaries.py  summary.py
server/scraper/: case_page_scraper.py
tests/: test_api.py  test_paginating_scraper.py  test_scraper.py  test_scraper_id_selector.py
utils/: functional.py  logger.py  types.py
(+448 files in other folders)
