[tool.poetry]
name = "robojudge"
version = "0.1.0"
description = ""
authors = ["Miroslav Rehounek <rehounek.miroslav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.98.0"
uvicorn = "^0.23.2"
openai = "^0.28.0"
more-itertools = "^10.1.0"
chromadb = "^0.4.12"
langchain = "^0.0.299"
tiktoken = "^0.5.1"
playwright = "^1.38.0"
beautifulsoup4 = "^4.12.2"
strenum = "^0.4.15"
pymongo = "^4.5.0"
icecream = "^2.1.3"
async-lru = "^2.0.4"
pytest = "^7.4.2"
rocketry = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
