[tool.poetry]
name = "robojudge"
version = "0.1.0"
description = ""
authors = ["Miroslav Rehounek <rehounek.miroslav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.98.0"
uvicorn = "^0.23.2"
openai = "^0.28.0"
more-itertools = "^10.1.0"
chromadb = "^0.4.12"
tiktoken = "^0.5.1"
playwright = "^1.38.0"
beautifulsoup4 = "^4.12.2"
strenum = "^0.4.15"
pymongo = "^4.5.0"
icecream = "^2.1.3"
async-lru = "^2.0.4"
rocketry = "^2.5.1"
mongomock = "^4.1.2"
langchain = "^0.1.9"

[tool.poetry.group.dev.dependencies]
evaluate = "^0.4.0"
bert-score = "^0.3.13"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
replicate = "^0.15.3"
cohere = "^4.27"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-env = "^1.0.1"
pandas = "^2.1.1"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = [
    "ENV=test",
]